# min-sized-crates

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.py  update.py
.github/workflows/: breaking-update-check.yml
argparser/bpaf-size/: Cargo.toml
argparser/bpaf-size/src/: main.rs
argparser/clap-size/: Cargo.toml
argparser/clap-size/src/: main.rs
argparser/gumdrop-size/: Cargo.toml
argparser/gumdrop-size/src/: main.rs
argparser/pico-args-size/: Cargo.toml
argparser/pico-args-size/src/: main.rs
baseline/: Cargo.toml
http-client/attohttpc-size/: Cargo.toml
http-client/attohttpc-size/src/: main.rs
http-client/curl-size/: Cargo.toml
http-client/curl-size/src/: main.rs
http-client/minreq-size/: Cargo.toml
http-client/minreq-size/src/: main.rs
http-client/reqwest-blocking-size/: Cargo.toml
http-client/reqwest-blocking-size/src/: main.rs
http-client/reqwest-size/: Cargo.toml
http-client/reqwest-size/src/: main.rs
http-client/surf-size/: Cargo.toml
http-client/surf-size/src/: main.rs
http-client/ureq-size/: Cargo.toml
http-client/ureq-size/src/: main.rs
http-server/axum-size/: Cargo.toml
http-server/hyper-size/: Cargo.toml
http-server/rouille-size/: Cargo.toml
http-server/rouille-size/src/: main.rs
http-server/tiny-http-size/: Cargo.toml
http-server/tiny-http-size/src/: main.rs
logging/env-logger-size/: Cargo.toml
logging/env-logger-size/src/: main.rs
logging/log-lib-size/: Cargo.toml
logging/log-lib-size/src/: lib.rs  main.rs
logging/simple-logger-size/: Cargo.toml
logging/simple-logger-size/src/: main.rs
logging/simplelog-size/: Cargo.toml
logging/simplelog-size/src/: main.rs
logging/slog-size/: Cargo.toml
logging/slog-size/src/: main.rs
logging/tracing-json-size/: Cargo.toml
logging/tracing-json-size/src/: main.rs
logging/tracing-lib-size/: Cargo.toml
logging/tracing-lib-size/src/: lib.rs  main.rs
logging/tracing-size/: Cargo.toml
logging/tracing-size/src/: main.rs
regex/fancy-regex-size/: Cargo.toml
regex/fancy-regex-size/src/: main.rs
regex/onig-size/: Cargo.toml
regex/onig-size/src/: main.rs
regex/regex-lite-size/: Cargo.toml
regex/regex-lite-size/src/: main.rs
regex/regex-no-unicode-size/: Cargo.toml
regex/regex-no-unicode-size/src/: main.rs
regex/regex-size/: Cargo.toml
regex/regex-size/src/: main.rs
serializer/miniserde-size/: Cargo.toml
serializer/nanoserde-size/: Cargo.toml
serializer/serde-size/: Cargo.toml
(+3 files in other folders)
