[package]
name = "attohttpc-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.28.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
