[package]
name = "minreq-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.11.0", features = ["https-native", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
