[package]
name = "reqwest-blocking-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "blocking", "native-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
