[package]
name = "surf-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
serde = { version = "1.0.196", features = ["derive"] }
surf = "2.3.2"

[profile.release]
strip = true
